# dotnetcpp

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: build.yml
cmake/: CompilerFlags.cmake  Utils.cmake  functions.cmake  macros.cmake
include/dotnetcpp/System/: Buffer.h  Exception.h  Nullable.h  Object.h  Span.h  ThrowHelper.h  UInt32.h  UInt64.h  UIntPtr.h
src/runtime/: CMakeLists.txt
src/runtime/libraries/: CMakeLists.txt
src/runtime/libraries/System.Private.CoreLib/: Exception.cpp  Object.cpp  ThrowHelper.cpp
src/runtime/src/libraries/: CMakeLists.txt
src/runtime/src/libraries/System.Private.CoreLib/: Buffer.cpp  Nullable.cpp  Object.cpp  UIntPtr.cpp
src/runtime/src/tests/: CMakeLists.txt
src/runtime/tests/: BasicTest.cpp  CMakeLists.txt
src/runtime/tests/JIT/interpreter/: CMakeLists.txt  Interpreter.cpp
tests/: CMakeLists.txt  StringTest.cpp
